--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "repository": {
         "url": "https://github.com/SnurfDev/streampack"
     },
-    "version": "0.1.4",
+    "version": "0.1.5",
     "scripts": {
         "format": "prettier . --write",
+        "test": "jest",
         "build": "tsc"
     },
     "type": "module",
     "devDependencies": {
+        "@jest/globals": "^29.7.0",
+        "jest": "^29.7.0",
         "prettier": "^3.3.2",
+        "ts-jest": "^29.3.0",
         "typescript": "^5.0.0"
     },
     "keywords": [
